--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,8 @@ spring:
     cache: false
 
 
+password-crypt-key: myFirstPasswordEncoding
+
 
 mybatis:
   type-aliases-package: com.example.demo.vo
